--- a/css/style.css
+++ b/css/style.css
@@ -314,3 +314,11 @@ h6,
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.form-floating label {
+  white-space: normal;
+  overflow-wrap: break-word;
+  max-width: 100%;
+  padding-right: 0.5rem;
+  font-size: 0.9rem;
+}
+
